# exam_tools

./: .bowerrc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  030_official_delegation.json  033_figures.json  AUTHORS  LICENSE  README.md  bower.json  bower_postinstall.sh  compose.sh  cypress.json  cypress_helper.sh  cypress_server.sh  database.d3db  docker-compose.yml  ipho.db  manage.py  mkdocs.yml  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  uwsgi.ini
.gitlab/: README.txt  all.gitlab-ci.yml
bower/: .gitignore  bower_postinstall.sh
bower_postinstall/: README.md  mj_dialogs_mathjax.diff  mj_samples_mathjax.diff
docker/: Dockerfile  Dockerfile.dockerignore  Dockerfile.master  Dockerfile.testing_cypress  Dockerfile.testing_django  Dockerfile.worker  README.txt  bake.hcl  bake.yml  compose.sh  create_squash_file.py  cypress_xforward_bash.sh  dev_compose.sh  docker-compose-a-dev.yml  docker-compose-b-dev.yml  docker-compose-common.yml  old.docker-compose.yaml  run_if_ready.sh
docs/: admin_boardmeetings.md  admin_editor.md  admin_exam_editor.md  admin_exam_management.md  admin_figure_management.md  assign_exams.md  exam_editor.md  exam_editor_faq.md  exam_feedbacks.md  index.md  language_settings.md  results_grading.md  step_by_step.md  tool_feedbacks.md  translations.md  voting.md
e2e/: README.md  cypress.json  cypress_batch.sh  cypress_helper.sh  cypress_ibo_data.sh  server_with_testdata.sh  server_with_testdata_postgres.sh  server_with_testdata_postgres_ibo.sh
exam_tools/: __init__.py  ansible_settings_prod.py.j2  celery.py  context_processors.py  email_handler.py  urls.py  (+13 more)
(+1289 files in other folders)
